tests/neg/unroll-illegal3.check
-- Error: tests/neg/unroll-illegal3.scala:7:8 --------------------------------------------------------------------------
7 |    def foo(s: String, @unroll y: Boolean) = s + y // error
  |        ^
  |        Unrolled method foo must be final
-- Error: tests/neg/unroll-illegal3.scala:12:6 -------------------------------------------------------------------------
12 |  def foo(s: String, @unroll y: Boolean) = s + y // error
   |      ^
   |      Unrolled method foo must be final
-- Error: tests/neg/unroll-illegal3.scala:16:6 -------------------------------------------------------------------------
16 |  def foo(s: String, @unroll y: Boolean): String // error
   |      ^
   |      Unrolled method must be final and concrete
